# Farm-Assistant

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py
src/: .env  .env.example  main.py
src/api/v1/endpoints/: chat.py
src/core/: logging.py  settings.py
src/farm_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/schemas/: chat.py
src/services/: chat_prompts.py  chat_service.py  farm_tools.py  processing.py
src/services/input_guardrail/: factory.py  interface.py
src/services/input_guardrail/providers/: huggingface.py
src/services/llm/: factory.py  interface.py
src/services/llm/providers/: dashscope.py
src/services/memory/: factory.py  interface.py
src/services/memory/providers/: redis.py
tests/: test_chat_service.py  test_farm_tools.py
