[project]
name = "farm-assistant"
version = "0.1.0"
description = "Prototype Arabic farm chatbot backend using FastAPI and DashScope via the OpenAI SDK."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.3",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "httpx>=0.28.0",
    "uvicorn>=0.49.0",
    "transformers>=5.10.2",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
